# nav_stack

./: CMakeLists.txt  README.md  package.xml  qgc_parameters.params
cnfg/: cnfg_no_vxblx_sim_debugging_px4.rviz
docs/: Set-up & Installation Guids.md
docs/.obsidian/: workspace.json
docs/Allerlei-TFM/: Benchmark Trajectory for quadcopters.md  Command Line prompts.md  Interesting Projects & Links.md  LAB IPs List.md
docs/Basics/: MAV overview.md  ROS.md  Reading Pose from TF Tree.md  Useful Shit.md
docs/Documentation/Allerlei - TFM-Documentation/: Building the Drone.md  Comparing Optit. & RS T265 TrackingCam.md  Description of the directories and ros packages.md  Drone Specs - Part List.md  Files accessed when using Optitrack or the Tracking Cam for localization.md  Flying Ocho - generating process.md  Git-Hub Branches.md  MavSDK.md  PX4 Architectural Overview.md  QGC - Parameters.md  before and after motor change.md  important mavros - ROS Topics with px4.md  px4 docs.md
docs/Documentation/Comparison Optit & RS T265 TC/: Optitrack & reading T265.md  T265 TrackingCam vs Optitrack - loop.md  T265 TrackingCam vs Optitrack - square.md  free hand.md
docs/Documentation/Controller/: Controller Setup Scheme.md  how does yaw work.md  own p cntrl test - cntrl comparison.md  ros pid sim test - comparison.md  ros pid xyz values in sim.md
docs/Documentation/Controller/pid_param_tuning/: Useful resources.md
docs/Documentation/Controller/pid_param_tuning/line/: real - only z pid active.md  sim - for yaw.md  (+2 more)
docs/Documentation/Experiments/: Real drone - Basic Experiments.md  voxblox, mav traj. gen, pid, px4.md
docs/Documentation/PX4 SITL Simulation & EKF2/: Getting ground truth from gazebo.md  Important Files.md  Parameter tweaking.md  Reference Frames and ROS.md  Setting up mocap & EKF2 mofo for Sim.md  all EKF Parameters.md  base_link - odom - map.md  flying ocho hard coded points.md  sim. k-controller for z.md
docs/Documentation/QGC - Parameters/: Backup parameters for Optitrack or RS T265.md  important EKF2 Parameters with explanation.md
docs/Documentation/Tracking Cam/: RQT Graphs - running TrackingCam or Bridge on the drone or ground computer.md  RS T265 - loop flight.md  Tracking Cam docu and structure.md  Workflow of reading only the the tracking cam pose.md
docs/ERRORs and Problems/: ERROR [simulator_mavlink] poll timeout 0, 22.md  GeographicLib exception File not readable - install Geoid Model dataset.md  Getting the drone connection to work with the simulation and real drone.md  Launching the px4 sitl sim., Gazebo error.md  No transform between frames map and base_link.md  Pixhawk Offboard Mode & MavRos.md  Position control - deviation.md  Problem with grpc.md  RTT too high for timesync.md  Radio Joysticks too high sensibility.md  Sending offboard message.md  TF Frames jumping back to origin in RViz with Tracking Cam.md  TF_OLD_DATA ignoring data from the past for fram f.md  Tracking Cam TF - absolut error between px4-EKF2 output pose and Tracking Cam.md  Tracking Cam TF - proportional error between px4 output pose and Tracking Cam.md  Tracking Cam TF error in trajectory generation.md  Tracking Cam path deviation (rotation).md  error with c++ standard 11 to 14.md  setting up mavros Packages, mav_trajectory_generat.md  undefined reference to ompl.md  voxblox_skeleton uint32_t - uint64_t.md  yaw estimate error (connection to mission computer.md
docs/Run & Install Guids/: Installing plotjuggler.md
docs/Run & Install Guids/Real Drone run guide/: mav traj. gen., with voxblox, , pid, px4.md  mav traj. gen.,optitrack, px4.md  mav traj. gen.,tracking cam, px4.md  read T265 tracking cam, mav traj. gen., px4.md
docs/Run & Install Guids/Simulation run guide/: hector  w_ voxblox  & mav traj. gen.md  mavsdk example.md  optitrack - old.md  px4 test.md  px4 with ROS PID Cntrl with out voxblox & with mav traj. ge.md  px4 with voxblox & w_ mav traj. gen.md
docs/_resources/: backup_after_Edu.params  camera_pose_loop_2024-07-24-12-29-12.bag  flying_with_t265_cam.params  flyling_with_optitrack.params  optit_pose_loop_2024-07-24-12-15-44.bag  optit_pose_square_2024-07-24-16-32-08.bag  plot_juggler_layout_2024-05-31.xml  trajectory_bag_2024-07-23-18-14-17.bag
include/: traj_generation.h
launch/: drone_connection.launch  mavros_posix_sitl.launch  vxblx_start.launch
meshes/: cinempc.urdf
src/: drone_connection.cpp  mpc.cpp  traj_generation.cpp
(+7 files in other folders)
