<?xml version="1.0"?>
<package format="2">
  <name>nav_stack</name>

  <version>0.0.0</version>
  <description>The nav_stack package</description>

  <maintainer email="caspar.conradi@posteo.org">arob</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <depend>roslib</depend>
  <depend>hector_uav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>

  </export>

</package>